compailer/src/parser/RoboLParser.java
package parser;

// Generated from RoboL.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RoboLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KW_OKOLINA=1, KW_OKOLINA_DZID=2, KW_POCHETOK=3, KW_KRAJ=4, KW_OKOLINA_ZHETON=5, 
		KW_ROBOT=6, KW_PROCEDURA=7, KW_BROJ=8, KW_NASOKA=9, KW_ODI=10, KW_LEVO=11, 
		KW_DESNO=12, KW_ZEMI=13, KW_OSTAVI=14, KW_AKO=15, KW_ZHETON=16, KW_DZID=17, 
		KW_POVTORUVAJ=18, KW_DO=19, KW_PATI=20, KW_PROMENLIVA=21, OP_ASSIGN=22, 
		OP_ADD=23, OP_MINUS=24, OP_MULTIPLY=25, OP_DIVIDE=26, OP_EQUAL=27, OP_NOTEQUAL=28, 
		OP_GREATER=29, OP_LESS=30, OP_GREATEREQUAL=31, OP_LESSEQUAL=32, NASOKA=33, 
		BROJ=34, ID=35, EXCLAMATION=36, COMMA=37, LPAREN=38, RPAREN=39, COLON=40, 
		ID_ERROR=41, ERROR=42, PRAVEC=43;
	public static final String[] tokenNames = {
		"<INVALID>", "KW_OKOLINA", "KW_OKOLINA_DZID", "KW_POCHETOK", "KW_KRAJ", 
		"KW_OKOLINA_ZHETON", "KW_ROBOT", "KW_PROCEDURA", "KW_BROJ", "KW_NASOKA", 
		"KW_ODI", "KW_LEVO", "KW_DESNO", "KW_ZEMI", "KW_OSTAVI", "KW_AKO", "KW_ZHETON", 
		"KW_DZID", "KW_POVTORUVAJ", "KW_DO", "KW_PATI", "KW_PROMENLIVA", "OP_ASSIGN", 
		"OP_ADD", "OP_MINUS", "OP_MULTIPLY", "OP_DIVIDE", "OP_EQUAL", "OP_NOTEQUAL", 
		"OP_GREATER", "OP_LESS", "OP_GREATEREQUAL", "OP_LESSEQUAL", "NASOKA", 
		"BROJ", "ID", "EXCLAMATION", "COMMA", "LPAREN", "RPAREN", "COLON", "ID_ERROR", 
		"ERROR", "PRAVEC"
	};
	public static final int
		RULE_start = 0, RULE_definiranje_okolina_block = 1, RULE_okolina_block = 2, 
		RULE_zidovi_block = 3, RULE_zid = 4, RULE_zetoni_block = 5, RULE_zeton = 6, 
		RULE_nasoka_block = 7, RULE_potprocedura_block = 8, RULE_argumenti = 9, 
		RULE_argument = 10, RULE_tip = 11, RULE_glavna_procedura_block = 12, RULE_broj_promenliva = 13, 
		RULE_nasoka_promenliva = 14, RULE_izraz = 15, RULE_term = 16, RULE_factor = 17, 
		RULE_deklariranje_promenliva = 18, RULE_azururanje_promenliva = 19, RULE_inicijaliziranje_promenliva = 20, 
		RULE_uslov = 21, RULE_komparator = 22, RULE_operator = 23, RULE_komanda = 24, 
		RULE_komanda_site = 25, RULE_komanda_vgnezdena = 26, RULE_komanda_kontrola = 27, 
		RULE_ako_zeton_block = 28, RULE_ako_zid_block = 29, RULE_ako_nasoka_block = 30, 
		RULE_ako_uslov_block = 31, RULE_komanda_povtoruvaj = 32, RULE_povtoruvaj_broj_pati_block = 33, 
		RULE_povtoruvaj_do_zeton_block = 34, RULE_povtoruvaj_do_zid_block = 35, 
		RULE_povtoruvaj_do_nasoka_block = 36, RULE_povtoruvaj_do_uslov_block = 37, 
		RULE_povik_procedura = 38, RULE_parametri = 39, RULE_parametar = 40;
	public static final String[] ruleNames = {
		"start", "definiranje_okolina_block", "okolina_block", "zidovi_block", 
		"zid", "zetoni_block", "zeton", "nasoka_block", "potprocedura_block", 
		"argumenti", "argument", "tip", "glavna_procedura_block", "broj_promenliva", 
		"nasoka_promenliva", "izraz", "term", "factor", "deklariranje_promenliva", 
		"azururanje_promenliva", "inicijaliziranje_promenliva", "uslov", "komparator", 
		"operator", "komanda", "komanda_site", "komanda_vgnezdena", "komanda_kontrola", 
		"ako_zeton_block", "ako_zid_block", "ako_nasoka_block", "ako_uslov_block", 
		"komanda_povtoruvaj", "povtoruvaj_broj_pati_block", "povtoruvaj_do_zeton_block", 
		"povtoruvaj_do_zid_block", "povtoruvaj_do_nasoka_block", "povtoruvaj_do_uslov_block", 
		"povik_procedura", "parametri", "parametar"
	};

	@Override
	public String getGrammarFileName() { return "RoboL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RoboLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public Definiranje_okolina_blockContext definiranje_okolina_block() {
			return getRuleContext(Definiranje_okolina_blockContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); definiranje_okolina_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definiranje_okolina_blockContext extends ParserRuleContext {
		public List<Potprocedura_blockContext> potprocedura_block() {
			return getRuleContexts(Potprocedura_blockContext.class);
		}
		public Okolina_blockContext okolina_block() {
			return getRuleContext(Okolina_blockContext.class,0);
		}
		public Zetoni_blockContext zetoni_block() {
			return getRuleContext(Zetoni_blockContext.class,0);
		}
		public Zidovi_blockContext zidovi_block() {
			return getRuleContext(Zidovi_blockContext.class,0);
		}
		public Nasoka_blockContext nasoka_block() {
			return getRuleContext(Nasoka_blockContext.class,0);
		}
		public Potprocedura_blockContext potprocedura_block(int i) {
			return getRuleContext(Potprocedura_blockContext.class,i);
		}
		public Glavna_procedura_blockContext glavna_procedura_block() {
			return getRuleContext(Glavna_procedura_blockContext.class,0);
		}
		public Definiranje_okolina_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definiranje_okolina_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).enterDefiniranje_okolina_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).exitDefiniranje_okolina_block(this);
		}
	}

	public final Definiranje_okolina_blockContext definiranje_okolina_block() throws RecognitionException {
		Definiranje_okolina_blockContext _localctx = new Definiranje_okolina_blockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definiranje_okolina_block);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(84); okolina_block();
			setState(86);
			_la = _input.LA(1);
			if (_la==KW_OKOLINA_DZID) {
				{
				setState(85); zidovi_block();
				}
			}

			setState(89);
			_la = _input.LA(1);
			if (_la==KW_OKOLINA_ZHETON) {
				{
				setState(88); zetoni_block();
				}
			}

			setState(91); nasoka_block();
			setState(95);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(92); potprocedura_block();
					}
					} 
				}
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(98); glavna_procedura_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Okolina_blockContext extends ParserRuleContext {
		public List<TerminalNode> BROJ() { return getTokens(RoboLParser.BROJ); }
		public TerminalNode COMMA() { return getToken(RoboLParser.COMMA, 0); }
		public TerminalNode RPAREN() { return getToken(RoboLParser.RPAREN, 0); }
		public TerminalNode LPAREN() { return getToken(RoboLParser.LPAREN, 0); }
		public TerminalNode BROJ(int i) {
			return getToken(RoboLParser.BROJ, i);
		}
		public TerminalNode KW_OKOLINA() { return getToken(RoboLParser.KW_OKOLINA, 0); }
		public Okolina_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_okolina_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).enterOkolina_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).exitOkolina_block(this);
		}
	}

	public final Okolina_blockContext okolina_block() throws RecognitionException {
		Okolina_blockContext _localctx = new Okolina_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_okolina_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100); match(KW_OKOLINA);
			setState(101); match(LPAREN);
			setState(102); match(BROJ);
			setState(103); match(COMMA);
			setState(104); match(BROJ);
			setState(105); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Zidovi_blockContext extends ParserRuleContext {
		public TerminalNode KW_KRAJ() { return getToken(RoboLParser.KW_KRAJ, 0); }
		public ZidContext zid(int i) {
			return getRuleContext(ZidContext.class,i);
		}
		public TerminalNode KW_OKOLINA_DZID() { return getToken(RoboLParser.KW_OKOLINA_DZID, 0); }
		public TerminalNode KW_POCHETOK() { return getToken(RoboLParser.KW_POCHETOK, 0); }
		public List<ZidContext> zid() {
			return getRuleContexts(ZidContext.class);
		}
		public Zidovi_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_zidovi_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).enterZidovi_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).exitZidovi_block(this);
		}
	}

	public final Zidovi_blockContext zidovi_block() throws RecognitionException {
		Zidovi_blockContext _localctx = new Zidovi_blockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_zidovi_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107); match(KW_OKOLINA_DZID);
			setState(108); match(KW_POCHETOK);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PRAVEC) {
				{
				{
				setState(109); zid();
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115); match(KW_KRAJ);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ZidContext extends ParserRuleContext {
		public TerminalNode PRAVEC() { return getToken(RoboLParser.PRAVEC, 0); }
		public List<TerminalNode> BROJ() { return getTokens(RoboLParser.BROJ); }
		public TerminalNode OP_MINUS() { return getToken(RoboLParser.OP_MINUS, 0); }
		public TerminalNode BROJ(int i) {
			return getToken(RoboLParser.BROJ, i);
		}
		public ZidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_zid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).enterZid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).exitZid(this);
		}
	}

	public final ZidContext zid() throws RecognitionException {
		ZidContext _localctx = new ZidContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_zid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); match(PRAVEC);
			setState(118); match(BROJ);
			setState(119); match(BROJ);
			setState(120); match(OP_MINUS);
			setState(121); match(BROJ);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Zetoni_blockContext extends ParserRuleContext {
		public List<ZetonContext> zeton() {
			return getRuleContexts(ZetonContext.class);
		}
		public TerminalNode KW_KRAJ() { return getToken(RoboLParser.KW_KRAJ, 0); }
		public TerminalNode KW_POCHETOK() { return getToken(RoboLParser.KW_POCHETOK, 0); }
		public TerminalNode KW_OKOLINA_ZHETON() { return getToken(RoboLParser.KW_OKOLINA_ZHETON, 0); }
		public ZetonContext zeton(int i) {
			return getRuleContext(ZetonContext.class,i);
		}
		public Zetoni_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_zetoni_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).enterZetoni_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).exitZetoni_block(this);
		}
	}

	public final Zetoni_blockContext zetoni_block() throws RecognitionException {
		Zetoni_blockContext _localctx = new Zetoni_blockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_zetoni_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); match(KW_OKOLINA_ZHETON);
			setState(124); match(KW_POCHETOK);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LPAREN) {
				{
				{
				setState(125); zeton();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131); match(KW_KRAJ);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ZetonContext extends ParserRuleContext {
		public List<TerminalNode> BROJ() { return getTokens(RoboLParser.BROJ); }
		public TerminalNode COMMA() { return getToken(RoboLParser.COMMA, 0); }
		public TerminalNode RPAREN() { return getToken(RoboLParser.RPAREN, 0); }
		public TerminalNode LPAREN() { return getToken(RoboLParser.LPAREN, 0); }
		public TerminalNode BROJ(int i) {
			return getToken(RoboLParser.BROJ, i);
		}
		public ZetonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_zeton; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).enterZeton(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).exitZeton(this);
		}
	}

	public final ZetonContext zeton() throws RecognitionException {
		ZetonContext _localctx = new ZetonContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_zeton);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); match(LPAREN);
			setState(134); match(BROJ);
			setState(135); match(COMMA);
			setState(136); match(BROJ);
			setState(137); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nasoka_blockContext extends ParserRuleContext {
		public TerminalNode NASOKA() { return getToken(RoboLParser.NASOKA, 0); }
		public List<TerminalNode> BROJ() { return getTokens(RoboLParser.BROJ); }
		public TerminalNode COMMA() { return getToken(RoboLParser.COMMA, 0); }
		public TerminalNode RPAREN() { return getToken(RoboLParser.RPAREN, 0); }
		public TerminalNode KW_ROBOT() { return getToken(RoboLParser.KW_ROBOT, 0); }
		public TerminalNode LPAREN() { return getToken(RoboLParser.LPAREN, 0); }
		public TerminalNode BROJ(int i) {
			return getToken(RoboLParser.BROJ, i);
		}
		public Nasoka_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nasoka_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).enterNasoka_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).exitNasoka_block(this);
		}
	}

	public final Nasoka_blockContext nasoka_block() throws RecognitionException {
		Nasoka_blockContext _localctx = new Nasoka_blockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_nasoka_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139); match(KW_ROBOT);
			setState(140); match(NASOKA);
			setState(141); match(LPAREN);
			setState(142); match(BROJ);
			setState(143); match(COMMA);
			setState(144); match(BROJ);
			setState(145); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Potprocedura_blockContext extends ParserRuleContext {
		public TerminalNode KW_KRAJ() { return getToken(RoboLParser.KW_KRAJ, 0); }
		public ArgumentiContext argumenti() {
			return getRuleContext(ArgumentiContext.class,0);
		}
		public List<Komanda_siteContext> komanda_site() {
			return getRuleContexts(Komanda_siteContext.class);
		}
		public TerminalNode ID() { return getToken(RoboLParser.ID, 0); }
		public TerminalNode RPAREN() { return getToken(RoboLParser.RPAREN, 0); }
		public TerminalNode KW_POCHETOK() { return getToken(RoboLParser.KW_POCHETOK, 0); }
		public TerminalNode KW_PROCEDURA() { return getToken(RoboLParser.KW_PROCEDURA, 0); }
		public TerminalNode LPAREN() { return getToken(RoboLParser.LPAREN, 0); }
		public Komanda_siteContext komanda_site(int i) {
			return getRuleContext(Komanda_siteContext.class,i);
		}
		public Potprocedura_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_potprocedura_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).enterPotprocedura_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).exitPotprocedura_block(this);
		}
	}

	public final Potprocedura_blockContext potprocedura_block() throws RecognitionException {
		Potprocedura_blockContext _localctx = new Potprocedura_blockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_potprocedura_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147); match(KW_PROCEDURA);
			setState(148); match(ID);
			setState(149); match(LPAREN);
			setState(151);
			_la = _input.LA(1);
			if (_la==KW_BROJ || _la==KW_NASOKA) {
				{
				setState(150); argumenti();
				}
			}

			setState(153); match(RPAREN);
			setState(154); match(KW_POCHETOK);
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_ODI) | (1L << KW_LEVO) | (1L << KW_DESNO) | (1L << KW_ZEMI) | (1L << KW_OSTAVI) | (1L << KW_AKO) | (1L << KW_POVTORUVAJ) | (1L << KW_PROMENLIVA) | (1L << ID))) != 0)) {
				{
				{
				setState(155); komanda_site();
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(161); match(KW_KRAJ);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentiContext extends ParserRuleContext {
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(RoboLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RoboLParser.COMMA, i);
		}
		public ArgumentiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumenti; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).enterArgumenti(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).exitArgumenti(this);
		}
	}

	public final ArgumentiContext argumenti() throws RecognitionException {
		ArgumentiContext _localctx = new ArgumentiContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_argumenti);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163); argument();
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(164); match(COMMA);
				setState(165); argument();
				}
				}
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RoboLParser.ID, 0); }
		public TipContext tip() {
			return getRuleContext(TipContext.class,0);
		}
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).enterArgument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).exitArgument(this);
		}
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_argument);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171); tip();
			setState(172); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipContext extends ParserRuleContext {
		public TerminalNode KW_NASOKA() { return getToken(RoboLParser.KW_NASOKA, 0); }
		public TerminalNode KW_BROJ() { return getToken(RoboLParser.KW_BROJ, 0); }
		public TipContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tip; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).enterTip(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoboLListener ) ((RoboLListener)listener).exitTip(this);
		}
	}

	public final TipContext tip() throws RecognitionException {
		TipContext _localctx = new TipContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_tip);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			_la = _input.LA(1);
			if ( !(_la==KW_BROJ || _la==KW_NASOKA) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
